[gd_scene load_steps=3 format=2]

[ext_resource path="res://interface/Interface.gd" type="Script" id=1]
[ext_resource path="res://interface/images/brush.png" type="Texture" id=2]

[node name="Interface" type="Node2D"]

script = ExtResource( 1 )

[node name="GridContainer" type="Node" parent="." index="0"]

[node name="Cursor" type="Sprite" parent="." index="1"]

texture = ExtResource( 2 )
_sections_unfolded = [ "Offset", "Transform" ]

[node name="DefenseLabel" type="Label" parent="Cursor" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -36.0
margin_top = -36.0
margin_right = -36.0
margin_bottom = -36.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect" ]

[node name="HUD" type="CanvasLayer" parent="." index="2"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="UnitInfo" type="Panel" parent="HUD" index="0"]

self_modulate = Color( 1, 1, 1, 0.470588 )
anchor_left = 0.0
anchor_top = 1.0
anchor_right = 0.0
anchor_bottom = 1.0
margin_top = -60.0
margin_right = 1280.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Anchor", "Rect", "Visibility" ]

[node name="HealthLabel" type="Label" parent="HUD/UnitInfo" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1.0
margin_top = 7.0
margin_right = 88.0
margin_bottom = 21.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Health: 30/30"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="MovesLabel" type="Label" parent="HUD/UnitInfo" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1.0
margin_top = 24.0
margin_right = 72.0
margin_bottom = 38.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Moves: 5/5"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="DamageLabel" type="Label" parent="HUD/UnitInfo" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1.0
margin_top = 41.0
margin_right = 69.0
margin_bottom = 55.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Damage: 8"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="EndTurn" type="Button" parent="HUD" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1194.0
margin_top = 745.0
margin_right = 1274.0
margin_bottom = 795.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "End Turn"
flat = false
align = 1
_sections_unfolded = [ "Rect" ]

[node name="SideLabel" type="Label" parent="HUD" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 43.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Side: 1"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1


